--- a/scss/style.scss
+++ b/scss/style.scss
@@ -99,13 +99,19 @@ body {
 
 	&__body {
 		display: flex;
+		flex-wrap: wrap;
 		justify-content: center;
 		align-items: center;
 		gap: 25px;
-		min-height: 100dvh;
+		min-height: 100vh;
+		padding: 60px 0;
 
 		@media (max-width: 600px) {
 			gap: 15px;
+		}
+
+		@media (max-width: 400px) {
+			gap: 5px;
 		}
 	}
 
@@ -179,6 +185,8 @@ body {
 
 			@media (max-width: 600px) {
 				font-size: 19px;
+				max-width: 100px;
+				line-height: 100%;
 			}
 		}
 
@@ -213,10 +221,6 @@ body {
 						position: absolute;
 						top: -15px;
 						left: 0;
-
-						@media (max-width: 800px) {
-							width: 120px;
-						}
 
 						@media (max-width: 600px) {
 							width: 100px;
@@ -253,10 +257,6 @@ body {
 				top: -15px;
 				left: 0;
 
-				@media (max-width: 800px) {
-					max-width: 120px;
-				}
-
 				@media (max-width: 600px) {
 					max-width: 100px;
 				}
@@ -276,10 +276,6 @@ body {
 			color: rgb(235, 9, 9);
 		}
 
-		@media (max-width: 800px) {
-			max-width: 120px;
-		}
-
 		@media (max-width: 600px) {
 			max-width: 100px;
 		}
@@ -294,6 +290,7 @@ body {
 
 		@media (max-width: 400px) {
 			margin: 0 5px;
+			width: 40px;
 		}
 
 		img {
@@ -303,21 +300,53 @@ body {
 
 	&__btn {
 		align-self: center;
-		background: url("../img/btn-bg.svg") center/cover no-repeat;
-		border: none;
-		padding: 40px 31px;
+		background: transparent;
+		border: 3px solid rgb(12, 22, 114);
+		border-radius: 50%;
+		padding: 30px 25px;
 		color: inherit;
 		font-size: 40px;
 		transition: all 0.3s;
 
 		&:hover {
 			color: rgb(235, 9, 9);
-			background: url("../img/btn-bg-red.svg") center/cover no-repeat;
+			border-color: rgb(235, 9, 9);
 		}
 
 		@media (max-width: 800px) {
-			padding: 23px 31px;
+			padding: 15px 25px;
 			font-size: 25px;
+		}
+	}
+
+	&__lang {
+		flex: 1 1 100%;
+	}
+}
+
+.lang {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 16px;
+
+	&__btn {
+		padding: 4px 14px;
+		background: transparent;
+		border: 3px solid rgb(12, 22, 114);
+		border-radius: 50%;
+		transition: all 0.3s;
+		color: inherit;
+		position: relative;
+
+		&:hover {
+			border-color: rgb(235, 9, 9);
+			color: rgb(235, 9, 9);
+		}
+
+		@media (max-width: 800px) {
+			font-size: 25px;
+			padding: 0px 14px;
 		}
 	}
 }
